# extrude

./: README.md  setup.cfg
.github/workflows/: ci.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_modules/extrude/: crude.html
docs/_sources/: index.rst.txt  table_of_contents.rst.txt
docs/module_docs/extrude/: crude.html
docsrc/: table_of_contents.rst
docsrc/module_docs/: extrude.rst
docsrc/module_docs/extrude/: base.rst  crude.rst  multi_app.rst  run_app.rst  util.rst
docsrc/module_docs/extrude/examples/: multi_apps_complex.rst  multi_apps_simple.rst  nav_tester.rst
docsrc/module_docs/extrude/examples/example_apps_simple/: example_app_1.rst  example_app_2.rst  (+1 more)
docsrc/module_docs/extrude/tests/: POC.rst
extrude/: __init__.py  base.py  crude.py  multi_app.py  run_app.py  util.py
extrude/examples/: multi_apps.py  multi_apps_complex.py  multi_apps_simple.py  nav_tester.py
extrude/examples/edge_impulse_like/: api.py  web_client.py
extrude/examples/example_apps/: example_app_2.py
extrude/examples/example_apps_complex/: inline_config.py  streamlit_house_app.py
extrude/examples/example_apps_complex/from_func_list/: __init__.py  funcs.py  utils.py
extrude/examples/example_apps_complex/from_streamlit/: __init__.py  simple_streamlit_app.py
extrude/examples/example_apps_simple/: example_app_1.py  example_app_2.py  streamlit_house_app.py
extrude/tests/: POC.py
extrude/tests/POC/: main.py  run_streamlitfront.py
(+2 files in other folders)
