[metadata]
name = extrude
version = 0.1.0
url = https://github.com/i2mint/extrude
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = Tool to run a composite web application to easily interact with python functions
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = extrude

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
    i2
    dol
    dill
